repos/backend/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: jenosize-backend
  namespace: default
spec:
  selector:
    matchLabels:
      app: jenosize-backend
  strategy:
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: jenosize-backend
    spec:
      containers:
        - name: jenosize-backend
          image: ghcr.io/Kittinutz/jenosize-backend:latest
          imagePullPolicy: Always
          resources:
            requests:
              cpu: 300m
              memory: 100Mi
            limits:
              cpu: 1000m
              memory: 4096Mi
          readinessProbe:
            httpGet:
              path: '/'
              port: 3000
            initialDelaySeconds: 10
            timeoutSeconds: 5
          ports:
            - containerPort: 3000
      imagePullSecrets:
        - name: github
