repos/backend/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: jenosize-backend
  namespace: default
spec:
  ports:
    - port: 3000
      targetPort: 3000
  selector:
    app: jenosize-backend
